Fixed spacing for responsive layout

--- a/css-input/input.css
+++ b/css-input/input.css
@@ -338,7 +338,7 @@ about-me-content section {
     header-container {
         border-bottom-left-radius: 1rem;
         border-bottom-right-radius: 1rem;
-        padding-inline: 2.5rem;
+        padding-inline: var(--spacing-outer);
     }
 
     header-links {
@@ -346,7 +346,7 @@ about-me-content section {
     }
 
     menu-container {
-        margin-top: 1.5rem;
+        margin-top: var(--spacing-inner);
     }
 
     mobile-title,
@@ -368,7 +368,7 @@ about-me-content section {
     }
 
     header-container {
-        padding-inline: 0.5rem;
+        padding-inline: var(--spacing-edges);
     }
 
     header-links {
@@ -376,7 +376,7 @@ about-me-content section {
     }
 
     social-container {
-        gap: 1rem;
+        gap: var(--spacing-inner);
     }
 
     home-wrapper,
@@ -387,7 +387,7 @@ about-me-content section {
     }
 
     menu-container {
-        padding-inline-start: 0.5rem;
+        padding-inline-start: var(--spacing-edges);
     }
 
     mobile-menu {
@@ -397,6 +397,7 @@ about-me-content section {
     }
 
     content-container {
+        margin-block: var(--spacing-outer);
         padding-inline: 1rem
     }
 
@@ -406,7 +407,7 @@ about-me-content section {
     }
 
     h2 {
-        font-size: 1.125em;
+        font-size: 1.5em;
     }
     
     ol.numbered {
